fix(infobox): add `text-align: center` to only child of `.plainlist`

--- a/src/SiteCommon/modules/infobox.less
+++ b/src/SiteCommon/modules/infobox.less
@@ -89,6 +89,10 @@
 
 	.plainlist li {
 		margin-bottom: 0;
+
+		&:only-child {
+			text-align: center;
+		}
 	}
 }
 
